--- a/public/watch.html
+++ b/public/watch.html
@@ -14,17 +14,20 @@
     .kx-logo{width:54px;height:54px;background:url('/logo.svg') center/contain no-repeat;margin:0 auto 8px;}
     .kx-title{font-weight:600;}
     .kx-sub{font-size:13px;color:#94a3b8;}
+
     #page{display:none;}
     .wrap{max-width:980px;margin:0 auto;padding:clamp(12px,3vw,22px);}
     .headerbar{display:grid;grid-template-columns:auto 1fr;align-items:center;margin-bottom:16px;}
     .btn{display:inline-block;padding:8px 14px;border:1px solid #6366f1;border-radius:12px;color:#6366f1;text-decoration:none;font-weight:500;}
     .btn:hover{background:#6366f1;color:#fff;}
+
     .card{background:rgba(15,23,42,.45);border:1px solid rgba(148,163,184,.15);border-radius:16px;}
     .teams{display:grid;grid-template-columns:1fr auto 1fr;gap:18px;align-items:center;justify-items:center;padding:16px;}
     .side{display:flex;flex-direction:column;align-items:center;gap:10px;}
     .side img{width:80px;height:80px;object-fit:contain;}
     .teamName{font-size:20px;font-weight:600;text-align:center;}
     .h1{font-size:32px;font-weight:800;color:#6366f1;text-align:center;}
+
     /* centered live time */
     #minuteBig{
       font-size:22px;
@@ -34,18 +37,22 @@
       margin-top:6px;
       display:none;
     }
+
     .center{text-align:center;color:#94a3b8;margin:10px 0 18px;}
     #statusLine{font-weight:600;color:#e2e8f0;}
+
     .servercard{margin-top:10px;background:rgba(15,23,42,.45);border:1px solid rgba(148,163,184,.15);border-radius:16px;padding:14px;}
     .serverbar{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:14px;}
     .serverbar a{display:block;background:linear-gradient(135deg,#6366f1,#7c3aed);border-radius:14px;padding:12px 8px;text-align:center;color:#fff;font-weight:500;text-decoration:none;}
-    /* popup — white for contrast */
+
+    /* popup */
     .tip-overlay{position:fixed;inset:0;background:rgba(15,23,42,.45);display:flex;align-items:center;justify-content:center;z-index:200;}
     .tip-overlay.hidden{display:none;}
     .tip-box{background:#ffffff;color:#0f172a;border-radius:16px;padding:18px 18px 14px;max-width:320px;box-shadow:0 12px 40px rgba(0,0,0,.35);}
     .tip-title{font-weight:600;margin-bottom:6px;}
     .tip-text{font-size:13px;line-height:1.4;margin-bottom:14px;}
     .tip-btn{display:inline-block;background:#6366f1;border:none;border-radius:999px;padding:7px 16px;color:#fff;cursor:pointer;font-weight:500;}
+
     @media(max-width:520px){
       .wrap{padding:10px 10px 80px;}
       .teams .side img{width:58px;height:58px;}
@@ -63,7 +70,6 @@
   </div>
 </div>
 
-<!-- popup -->
 <div id="server-tip" class="tip-overlay hidden">
   <div class="tip-box">
     <div class="tip-title">Try the other servers</div>
@@ -103,22 +109,183 @@
 </div>
 
 <script>
-const $=id=>document.getElementById(id);
-function qs(n){return new URLSearchParams(location.search).get(n)||'';}
-function slug(s){return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,'');}
-function capWords(s){return String(s||'').split(/[-\\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' ');}
-function addDaysISO(iso,n){const d=new Date(iso);d.setDate(d.getDate()+n);return d.toISOString().slice(0,10);}
-function isoToYMD(iso){return iso.replace(/-/g,'');}
-function formatStatus(s){const raw=String(s||'').toUpperCase();if(/(LIVE|IN_PLAY|PLAYING|Q|OT|HALF)/.test(raw))return'Live';if(/(HALF-TIME|PAUSE)/.test(raw))return'Half / Pause';if(/(FINAL|FINISH|ENDED)/.test(raw))return'Finished';return'Scheduled';}
-function displayMinute(fx){const st=String(fx.status||'').toUpperCase();if(!/(LIVE|IN_PLAY|PLAYING|Q|OT|HALF)/.test(st))return'';let m=String(fx.minute||'').trim();if(!m)return'';if(/(AM|PM|ET|GMT|EST)/i.test(m)||/\\d{1,2}\\/\\d{1,2}/.test(m))return'';return m;}
-function renderServers(sl){const bar=$('serverBar');if(!bar)return;const url='/stream_premium.html?id='+encodeURIComponent(sl)+'&k=2e53b34da32e5044e25f26baddab45';const labels=['Server 1','Server 2','Server 3','Server 4','Server 5','Server 6'];bar.innerHTML=labels.map(l=>`<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');}
-function matchSlug(sl,fx){const h=slug(fx.home?.name||''),a=slug(fx.away?.name||'');return sl===`${h}-vs-${a}`||sl===`${a}-vs-${h}`;}
-async function fixturesFor(isoDate){const ymd=isoToYMD(isoDate);try{const r=await fetch(`https://fotbal.site/fixtures.php?date=${ymd}`,{cache:'no-store'});if(!r.ok)return[];const j=await r.json();return j.fixtures||[]}catch(e){return[]}}
-function applyFixtureStatus(fx){const st=formatStatus(fx.status);$('statusLine').textContent=st;const m=displayMinute(fx);if(m){$('minuteBig').textContent=m;$('minuteBig').style.display='block';}else{$('minuteBig').style.display='none';}}
-function applyFixture(fx){$('homeName').textContent=fx.home?.name||'Home';$('awayName').textContent=fx.away?.name||'Away';$('homeLogo').src=fx.home?.logo||'/logo.svg';$('awayLogo').src=fx.away?.logo||'/logo.svg';applyFixtureStatus(fx);renderServers(slug((fx.home?.name||'')+'-vs-'+(fx.away?.name||'')));}
-function startStatusPoll(baseISO,slugPart){async function tick(){const list=await fixturesFor(baseISO);const hit=list.find(fx=>matchSlug(slugPart,fx));if(hit){applyFixtureStatus(hit);const s=String(hit.status||'').toUpperCase();if(/(FINISH|FINAL)/.test(s))return;}setTimeout(tick,25000);}tick();}
-async function load(){const raw=qs('id')||qs('m')||'';const pure=raw.includes('@')?raw.split('@')[0]:raw;const parts=pure.split('-vs-');if(parts.length===2){$('homeName').textContent=capWords(parts[0]);$('awayName').textContent=capWords(parts[1]);renderServers(pure);}const baseISO=raw.includes('@')?raw.split('@')[1].replace(/(\\d{4})(\\d{2})(\\d{2})/,'$1-$2-$3'):new Date().toISOString().slice(0,10);const slugPart=slug(pure);const days=[-2,-1,0,1,2];let found=null,foundDate=baseISO;for(const off of days){const iso=addDaysISO(baseISO,off);const list=await fixturesFor(iso);const hit=list.find(fx=>matchSlug(slugPart,fx));if(hit){found=hit;foundDate=iso;break;}}if(found){applyFixture(found);startStatusPoll(foundDate,slugPart);}$('kx-loader').classList.add('hidden');$('page').style.display='block';$('server-tip').classList.remove('hidden');}
-load();
+  function $(id){ return document.getElementById(id); }
+
+  function qs(name){
+    var p = new URLSearchParams(window.location.search);
+    return p.get(name) || '';
+  }
+
+  function slug(str){
+    return String(str || '')
+      .toLowerCase()
+      .replace(/[^a-z0-9]+/g,'-')
+      .replace(/(^-|-$)/g,'');
+  }
+
+  function capWords(str){
+    return String(str || '')
+      .split(/[-\s]+/)
+      .map(function(w){ return w ? w.charAt(0).toUpperCase() + w.slice(1) : ''; })
+      .join(' ');
+  }
+
+  function addDaysISO(iso, n){
+    var d = new Date(iso);
+    d.setDate(d.getDate() + n);
+    return d.toISOString().slice(0,10);
+  }
+
+  function isoToYMD(iso){ return iso.replace(/-/g,''); }
+
+  function formatStatus(raw){
+    raw = String(raw || '').toUpperCase();
+    if (/(LIVE|IN_PLAY|PLAYING|Q1|Q2|Q3|Q4|OT|OVERTIME|HALF)/.test(raw)) return 'Live';
+    if (/(FINAL|FINISH|ENDED)/.test(raw)) return 'Finished';
+    if (/(HALF-TIME|HALFTIME|PAUSED)/.test(raw)) return 'Half / Pause';
+    return 'Scheduled';
+  }
+
+  // show minute only when actually live
+  function displayMinute(fx){
+    var st = String((fx && fx.status) || '').toUpperCase();
+    var live = /(LIVE|IN_PLAY|PLAYING|Q1|Q2|Q3|Q4|OT|OVERTIME|HALF)/.test(st);
+    if (!live) return '';
+    var m = fx && fx.minute ? String(fx.minute).trim() : '';
+    if (!m) return '';
+    // filter out schedule-like strings
+    if (/(AM|PM|ET|GMT|EST)/i.test(m)) return '';
+    if (/\d{1,2}\/\d{1,2}/.test(m)) return '';
+    return m;
+  }
+
+  function renderServers(slugPart){
+    var bar = $('serverBar');
+    if (!bar) return;
+    var url = '/stream_premium.html?id=' + encodeURIComponent(slugPart) + '&k=2e53b34da32e5044e25f26baddab45';
+    var labels = ['Server 1','Server 2','Server 3','Server 4','Server 5','Server 6'];
+    var html = '';
+    for (var i=0;i<labels.length;i++){
+      html += '<a href="'+url+'" target="_blank" rel="noopener">'+labels[i]+'</a>';
+    }
+    bar.innerHTML = html;
+  }
+
+  function matchSlug(sl, fx){
+    var h = slug(fx && fx.home && fx.home.name);
+    var a = slug(fx && fx.away && fx.away.name);
+    return sl === (h + '-vs-' + a) || sl === (a + '-vs-' + h);
+  }
+
+  async function fixturesFor(isoDate){
+    var ymd = isoToYMD(isoDate);
+    var url = 'https://fotbal.site/fixtures.php?date=' + ymd;
+    try{
+      var r = await fetch(url, {cache:'no-store'});
+      if (!r.ok) return [];
+      var j = await r.json();
+      return j && j.fixtures ? j.fixtures : [];
+    }catch(e){
+      return [];
+    }
+  }
+
+  function applyFixtureStatus(fx){
+    var statusText = formatStatus(fx && fx.status);
+    $('statusLine').textContent = statusText || '-';
+
+    var minute = displayMinute(fx);
+    if (minute){
+      $('minuteBig').textContent = minute;
+      $('minuteBig').style.display = 'block';
+    } else {
+      $('minuteBig').style.display = 'none';
+    }
+  }
+
+  function applyFixture(fx){
+    var hn = fx && fx.home && fx.home.name ? fx.home.name : 'Home';
+    var an = fx && fx.away && fx.away.name ? fx.away.name : 'Away';
+    $('homeName').textContent = hn;
+    $('awayName').textContent = an;
+    $('homeLogo').src = (fx && fx.home && fx.home.logo) ? fx.home.logo : '/logo.svg';
+    $('awayLogo').src = (fx && fx.away && fx.away.logo) ? fx.away.logo : '/logo.svg';
+    applyFixtureStatus(fx);
+    renderServers(slug(hn + '-vs-' + an));
+  }
+
+  function startStatusPoll(baseISO, slugPart){
+    async function tick(){
+      var list = await fixturesFor(baseISO);
+      var hit = null;
+      for (var i=0;i<list.length;i++){
+        if (matchSlug(slugPart, list[i])){
+          hit = list[i];
+          break;
+        }
+      }
+      if (hit){
+        applyFixtureStatus(hit);
+        var st = String(hit.status || '').toUpperCase();
+        if (/(FINAL|FINISH|ENDED)/.test(st)) return;
+      }
+      setTimeout(tick, 25000);
+    }
+    tick();
+  }
+
+  async function load(){
+    var raw = qs('id') || qs('m') || '';
+    var pure = raw.indexOf('@') !== -1 ? raw.split('@')[0] : raw;
+
+    // prefill names
+    if (pure){
+      var parts = pure.split('-vs-');
+      if (parts.length === 2){
+        $('homeName').textContent = capWords(parts[0]);
+        $('awayName').textContent = capWords(parts[1]);
+        renderServers(pure);
+      } else {
+        $('homeName').textContent = capWords(pure);
+        renderServers(pure);
+      }
+    }
+
+    var baseISO = raw.indexOf('@') !== -1
+      ? raw.split('@')[1].replace(/(\d{4})(\d{2})(\d{2})/, '$1-$2-$3')
+      : new Date().toISOString().slice(0,10);
+
+    var slugPart = slug(pure);
+
+    var days = [-2,-1,0,1,2];
+    var found = null;
+    var foundDate = baseISO;
+
+    for (var d=0; d<days.length; d++){
+      var iso = addDaysISO(baseISO, days[d]);
+      var list = await fixturesFor(iso);
+      for (var i=0;i<list.length;i++){
+        if (matchSlug(slugPart, list[i])){
+          found = list[i];
+          foundDate = iso;
+          break;
+        }
+      }
+      if (found) break;
+    }
+
+    if (found){
+      applyFixture(found);
+      startStatusPoll(foundDate, slugPart);
+    }
+
+    // always show page
+    $('kx-loader').classList.add('hidden');
+    $('page').style.display = 'block';
+    $('server-tip').classList.remove('hidden');
+  }
+
+  load();
 </script>
 </body>
 </html>
